@@ -2,6 +2,12 @@
 
 class DB
 {
+        //
+        // the element relstatus of table releases is used to hold the status of the release
+        // The variable is a bitwise AND of status 
+        // List of processed constants - used in releases table
+        const NFO_PROCESSED_NAMEFIXER     = 1;  // We have processed the release against its .nfo file in the namefixer
+
 	private static $initialized = false;
 	private static $mysqli = null;
 
